Tests updated as per review comments